@@ -1,11 +1,13 @@
 4.4
 -----------------
 Do not create SVAC tuples
+Change procver to 202 for all exported file types
+New GR GlastRelease-17-35-24-lp53
+New ST ScienceTools-09-32-05 
+New DiffRsp, new ft2Utils, new fitsGen for P202
 add ability to ignore some deliveries when merging [LONE-190@JIRA]
 Don't clean up chunks until we're really done [LONE-193@JIRA]
 Improve retry handling [LONE-194@JIRA]
-Change procver to 202 for all exported file types
-New GR GlastRelease-17-35-24-lp51
 
 
 4.3
